force-app/main/default/objects/Config_Level__c/Config_Level__c.object-meta.xml
<CustomObject>
    <label>Config Level</label>
    <nameField>
        <label>Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Config Level</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>