force-app/main/default/objects/Config_Level__c/fields/AP__c.field-meta.xml
<CustomField>
    <fullName>AP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Appeal</description>
    <inlineHelpText>Appeal</inlineHelpText>
    <label>Apl</label>
    <type>Checkbox</type>
</CustomField>