force-app/main/default/objects/Config_Level__c/fields/Cabang__c.field-meta.xml
<CustomField>
    <fullName>Cabang__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <label>Cabang</label>
    <length>255</length>
    <type>Text</type>
</CustomField>