force-app/main/default/objects/Config_Level__c/fields/M_C__c.field-meta.xml
<CustomField>
    <fullName>M_C__c</fullName>
    <label>M/C</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>M_C</valueSetName>
    </valueSet>
</CustomField>