force-app/main/default/objects/Config_Level__c/fields/RC__c.field-meta.xml
<CustomField>
    <fullName>RC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recommend</description>
    <inlineHelpText>Recommend</inlineHelpText>
    <label>Reco</label>
    <type>Checkbox</type>
</CustomField>