force-app/main/default/objects/Config_Level__c/fields/RF__c.field-meta.xml
<CustomField>
    <fullName>RF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reject Final</description>
    <inlineHelpText>Reject Final</inlineHelpText>
    <label>RF</label>
    <type>Checkbox</type>
</CustomField>