force-app/main/default/objects/Config_Level__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Level__c</columns>
    <columns>M_C__c</columns>
    <columns>NAME</columns>
    <columns>RC__c</columns>
    <columns>AF__c</columns>
    <columns>RF__c</columns>
    <columns>AP__c</columns>
    <columns>Cabang__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>